# LeelaGUI

./: AboutDialog.cpp  AboutDialog.h  AnalysisWindow.cpp  App.cpp  App.h  CMakeLists.txt  ClockAdjustDialog.cpp  EngineThread.cpp  EngineThread.h  GUI.cpp  GUI.h  LeelaGUI.fbp  LeelaGUI.ini  LeelaGUI_OpenCL.ini  MainFrame.cpp  MainFrame.h  Makefile  Msg.cpp  Msg.h  NewGameDialog.cpp  NewGameDialog.h  README.md  ScoreDialog.cpp  ScoreDialog.h  ScoreHistogram.cpp  ScoreHistogram.h  SettingsDialog.cpp  SettingsDialog.h  SubProcess.cpp  SubProcess.h  TBoardPanel.cpp  TBoardPanel.h  TScorePanel.cpp  minidump.cpp
Win32/: Directory.build.props  LeelaGUI.rc  LeelaGUI.sln  LeelaGUI.vcxproj  packages.config  resource.h
Win32/res/: analyze.png.h  back.png.h  delete.png.h  execute.png.h  fileopen.png.h  filesave.png.h  find.png.h  forward.png.h  goparent3.png.h  minus.png.h  new.png.h  newrated.png.h  plus.png.h  quit.png.h  redo.png.h  resign.png.h  undo.png.h
cpp/command/: commandline.cpp  gtpKata.cpp  gtpKata.h
cpp/core/: rand.cpp
cpp/neuralnet/: openclbackend.cpp
engine/: AttribScores.h  Attributes.cpp  Attributes.h  FastBoard.cpp  FastState.cpp  FullBoard.cpp  GTP.cpp  GTP.h  GameState.cpp  GameState.h  MCPolicy.cpp  MCPolicy.h  Network.cpp  Network.h  OpenCL.cpp  OpenCL.h  PNNode.cpp  PNSearch.cpp  Random.cpp  SGFTree.cpp  SGFTree.h  TimeControl.cpp  TimeControl.h  Timing.h  UCTNode.cpp  UCTSearch.cpp  UCTSearch.h  Utils.cpp  Utils.h  config.h
i18n/: leela.po  messages.mo
installer_win32/: Leela.nsi
installer_win64/: Leela.nsi
